--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <header>
-    <h1>YNAB Going Dutch<span class="subtitle"> - ABN AMRO EDITION - </span></h1><br>
+    <h1><span style="color: red">PehrGit's fork of </span>YNAB Going Dutch<span class="subtitle"> - ABN AMRO EDITION - </span></h1><br>
     <h3>Converts your ABN AMRO bank statements from their TAB to YNAB CSV format</h3>
 </header>
 
@@ -29,7 +29,7 @@
         <p>This tool is created to automatically convert your TAB bank files of ABN AMRO to a format that is used by <a href="https://youneedabudget.com">"You Need A Budget"</a>.
             ABN AMRO does not know of the existence of CSV files. This is why this edition of the "YNAB going Dutch" site is necessary.</p>
         <p>Your CSV will instantly download upon file selection.</p>
-        <p>Do you want to convert files from other banks? Go to <a href="https://ynab.danielhaitink.nl/">YNAB Going Dutch</a>.</p>
+        <p>Do you want to convert files from other banks? Go to <a href="https://pehrgit.github.io/YNABGoingDutch/">YNAB Going Dutch</a>.</p>
     </div>
 
     <div id="drop-area">
@@ -47,7 +47,7 @@
 
 <footer>
     <div class="center">
-        Find the source on <a href="https://github.com/DanielsWrath/YNABGoingDutch-ABN-edition">Github</a><br>
+        Find the source on <a href="https://github.com/PehrGit/YNABGoingDutch-ABN-edition">Github</a><br>
         <div class="small">
             Created by <a href="https://www.danielhaitink.nl">Daniël Haitink</a> <a href="https://lionsdensoftware.nl/">Lions Den Software</a>
         </div>
